# hexxed

./: CMakeLists.txt  README.md  buffer.c  buffer.h  calculator.lemon  calculator_test.c  dialogs.c  dialogs.h  main.c  panes.c  panes.h  render.c  render.h
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml
man/: CMakeLists.txt  hexxed-tutorial.7.scd  hexxed.1.scd
